# med

./: .gitignore  Cargo.toml  README.md
src/: app.rs  buffer.rs  cmdbuf.rs  event.rs  gap.rs  highlight.rs  main.rs  movement.rs  span.rs  textobject.rs  ui.rs  wordclass.rs
src/buffer/: history.rs  mod.rs  tests.rs
src/cmd/: append.rs  change.rs  delete.rs  insert.rs  mod.rs  movement.rs  pattern.rs  tests.rs  undo.rs  write.rs
src/textobject/: mod.rs  tests.rs
